--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -5,19 +5,19 @@
 
 <form method="GET" class="mb-3 row g-2">
   <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="common_name" placeholder="Filter Common Name" value="{{ filter_common_name }}" />
+    <input type="text" class="form-control" name="common_name" placeholder="Common Name" value="{{ filter_common_name }}" />
   </div>
   <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="tag_id" placeholder="Filter Tag ID" value="{{ filter_tag_id }}" />
+    <input type="text" class="form-control" name="tag_id" placeholder="Tag ID" value="{{ filter_tag_id }}" />
   </div>
   <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="bin_location" placeholder="Filter Bin Location" value="{{ filter_bin_location }}" />
+    <input type="text" class="form-control" name="bin_location" placeholder="Bin Location" value="{{ filter_bin_location }}" />
   </div>
   <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="last_contract_num" placeholder="Filter Last Contract" value="{{ filter_last_contract }}" />
+    <input type="text" class="form-control" name="last_contract_num" placeholder="Last Contract" value="{{ filter_last_contract }}" />
   </div>
   <div class="col-12 col-md-2">
-    <input type="text" class="form-control" name="status" placeholder="Filter Status" value="{{ filter_status }}" />
+    <input type="text" class="form-control" name="status" placeholder="Status" value="{{ filter_status }}" />
   </div>
   <div class="col-12 col-md-2">
     <button type="submit" class="btn btn-primary" style="background: #e74c3c; border: none; box-shadow: 0 2px 4px rgba(0,0,0,0.2); transition: all 0.3s;">Apply Filters</button>
